--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "cloudinary": "^2.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
     "mongoose": "^8.5.0",
     "nodemon": "^3.1.4"
   }
