--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_BASE_URL = http://localhost:4000/api/v1
+REACT_APP_BASE_URL = https://filesharing-v137.onrender.com/api/v1
+# REACT_APP_BASE_URL = http://localhost:4000/api/v1
 
 # REACT_APP_BASE_URL = https://paytm-backend-aw1m.onrender.com/api/v1
